--- a/uptime-kuma/config.yaml
+++ b/uptime-kuma/config.yaml
@@ -1,7 +1,7 @@
 ---
-name: Uptime Kuma
+name: Vajny Uptime Kuma
 version: dev
-slug: uptime-kuma
+slug: vajny-uptime-kuma
 description: It is a self-hosted monitoring tool like "Uptime Robot"
 url: https://github.com/hassio-addons/addon-uptime-kuma
 codenotary: codenotary@frenck.dev
